# Task-Tracker-CLI

./: .gitignore  AGENTS.md  README.md  TASK_TRACKER_SPEC.md  commands.py  demo.tape  main.py  models.py  pyproject.toml  store.py  task_ops.py  task_store.py  test_task_ops.py
tests/: test_commands.py  test_store.py
