[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasker"
version = "0.1.0"
description = "A small CLI app for tracking tasks in a local JSON file."
readme = "TASK_TRACKER_SPEC.md"
requires-python = ">=3.9"
dependencies = ["tabulate>=0.9.0"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/WuLandon/Task-Tracker-CLI"

[project.scripts]
tasker = "main:main"

[tool.setuptools]
py-modules = ["main", "store", "commands", "models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
